# PracticWorkCplus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/scenes/: test_scene.json
assets/shaders/: model.frag  model.vert  triangle.vert
dependencies/include/glad/: gl.h
src/: main.cpp
src/application/: application.cpp  application.hpp
src/ecs/: Component.hpp  Entity.hpp  World.cpp  World.hpp  World.tpp
src/ecs/components/: Hierarchy.hpp  MeshRenderer.hpp  Tag.hpp  Transform.hpp
src/ecs/systems/: AnimationSystem.cpp  AnimationSystem.hpp  HierarchyUtils.cpp  HierarchyUtils.hpp  RenderSystem.cpp  RenderSystem.hpp
src/logger/: logger.cpp  logger.hpp
src/render/: IRenderAdapter.hpp  OpenGLAdapter.hpp  OpenGlAdapter.cpp
src/resources/: LoadQueue.hpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.tpp  ShaderLoader.cpp  ShaderLoader.hpp  ShaderProgram.hpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp
src/scene/: SceneSettings.hpp  componentRegistry.cpp  componentRegistry.hpp  sceneLoader.cpp  sceneLoader.hpp
src/states/: GameState.hpp  MenuState.cpp  MenuState.hpp  PauseState.cpp  PauseState.hpp  PlayState.cpp  PlayState.hpp  StateManager.cpp  StateManager.hpp
